2009-12-17  Murray Cumming  <murrayc@murrayc.com>

	Added ToolPalette.

	* gtk/src/gtk_enums.defs: Regenerated with enums.pl.
	* gtk/src/gtk_methods.defs: Regenerated with h2defs.py.
	* gtk/src/toolpalette.[hg|ccg]: An initial wrapper for GtkToolPalette.
	* gtk/gtkmm.h: Include the new toolpalette.h header.

2009-12-16  Armin Burgmeier  <armin@arbur.net>

	* win32_installer/translations/english.nsh:
	* win32_installer/translations/french.nsh:
	* win32_installer/translations/simpchinese.nsh: Added a new string
	recommending to choose a path not containing spaces for pkg-config to
	work.

	* win32_installer/gtkmm-installer.nsi.in: Show that string on the
	installation directory page. Also remove libxml2 and libgail-util
	documentation shortcuts from start menu on uninstall, and added
	pangommconfig.h and fontconfig.pc to the installer.

2009-12-10  Krzesimir Nowak  <qdlacz@gmail.com>

	* gdk/src/window.hg: Remove extra colons at offscreen methods
	to avoid warnings.

2009-12-03  José Alburquerque  <jaalburqu@svn.gnome.org>

	Make build successful when exceptions, vfuncs, etc. are disabled.

	* gtk/src/builder.hg:
	* gtk/src/builder.ccg: Included definitions and code for Glib::Error
	methods for when exceptions are disabled.
	(get_type_from_name_vfunc_callback): Wrap around #ifdefs for when
	vfuncs are not enabled.
	* gtk/src/menushell.ccg:
	* gtk/src/menushell.hg: Removed unneeded #endif and #ifdefs.
	(MenuShell_Class::insert_vfunc_callback):  Wrap around #ifdefs for
	when vfuncs are not enabled.

2009-12-03  Murray Cumming  <murrayc@murrayc.com>

	Gdk::Window: Add get/set_offscreen_embedder() and get_offscreen_pixmap().

	* gdk/src/window.hg: Add get/set_offscreen_embedder() and 
	get_offscreen_pixmap(), suggested by Oscar Lazzarino.

2009-11-27  Benjamin Herr  <ben@0x539.de>

	Gdk::PixbufAnimationIter: Make the methods public.

	* gdk/src/pixbufanimationiter.hg: Made get_delay_time(), get_pixbuf(),
	on_currently_loading_frame() and advance() public instead of