@@ -961,6 +961,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\gtk\gtkmm\border.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\gtk\gtkmm\box.h"
 				>
 			</File>
