@@ -24,6 +24,7 @@ gtkmm_files_extra_h =			\
 	accelkey.h			\
 	accelmap.h			\
 	base.h				\
+	border.h			\
 	cellrenderer_generation.h	\
 	comboboxentrytext.h		\
 	comboboxtext.h			\
