@@ -19,6 +19,7 @@
 
 #include <gtkmm/widget.h>
 #include <gtkmm/enums.h> //For SensitivityType.
+#include <gtkmm/border.h>
 _DEFS(gtkmm,gtk)
 _PINCLUDE(gtkmm/private/widget_p.h)
 
@@ -108,7 +109,9 @@ public:
   _WRAP_PROPERTY("fill-level", double)
   
 protected:
-  _WRAP_VFUNC(void get_range_border(GtkBorder* border) const, get_range_border)
+#m4 _CONVERSION(`Gtk::Border*',`GtkBorder*',($3))
+#m4 _CONVERSION(`GtkBorder*',`Gtk::Border*',($3))
+  _WRAP_VFUNC(void get_range_border(Gtk::Border* border) const, get_range_border)
 };
 
 } // namespace Gtk
