@@ -1,3 +1,13 @@
+2009-12-17  Krzesimir Nowak  <qdlacz@gmail.com>
+
+	* gtk/gtkmm/border.h: Created separate header file for Gtk::Border.
+	It contains a typedef and Glib::Value specialization for Gtk::Border.
+	* gtk/gtkmm/filelist.am: Add border.h to gtkmm_files_extra_h.
+	* gtk/src/entry.hg: Remove Gtk::Border typedef and include border.h.
+	* gtk/src/range.hg: get_range_border() vfunc now uses Gtk::Border*
+	instead of GtkBorder*. Written proper conversions for this.
+	* gtk/gtkmm.h: Include the new border.h header.
+
 2009-12-17  Murray Cumming  <murrayc@murrayc.com>
 
 	Added ToolPalette.
